fix: faq spacing sm responsive

--- a/css/style.css
+++ b/css/style.css
@@ -11591,7 +11591,7 @@ ul.children {
 .progress-area .elementor-container .skill-progress-wrapper .elementor-container {
   gap: 236px;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .progress-area .elementor-container .skill-progress-wrapper .elementor-container {
     gap: 12px;
   }
