--- a/sass/pages/_doctor-single.scss
+++ b/sass/pages/_doctor-single.scss
@@ -134,7 +134,7 @@
         .skill-progress-wrapper{
             .elementor-container{
                 gap: 236px;
-                @include md {
+                @include rmaxwd(991) {
                     gap: 12px;
                 }
                 @include lg {
